# VoxelKit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml
app/: main.py
app/routers/: __init__.py  embedding.py  h5.py  nifti.py  tiff.py
app/services/: h5_service.py  nifti_service.py
app/utils/: __init__.py  files.py
docs/: cli.md  getting-started.md  index.md  python-usage.md  qa-warnings.md  robots.txt
docs/api/: embedding.md  h5.md  index.md  nifti.md  tiff.md
docs/cli/: batch.md  embed-preview.md  embed-report.md  gui.md  index.md  inspect.md  preview.md  report.md
docs/contributing/: index.md  issues.md
docs/stylesheets/: extra.css
hooks/: rename_sitemap.py
overrides/: main.html
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/cli/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/python-usage/: index.html
site/qa-warnings/: index.html
site/search/: search_index.json
tests/: create_fixtures.py  test_api_endpoints.py  test_batch_report_feature.py  test_embedding_feature.py  test_gui_feature.py  test_numpy_feature.py  test_report_feature.py  test_tiff_feature.py
tests/fixtures/: sample_2d.h5  sample_2d.npy  sample_2d.tif  sample_3d.h5  sample_3d.tif  sample_4d.npy  sample_constant.npy  sample_embedding.npy  sample_embedding_dead_dims.npy  sample_embedding_nan_dims.npy  sample_embedding_outliers.npy  sample_mostly_zero.npy  sample_multi.npz  (+3 more)
voxelkit/: __init__.py  cli.py
(+42 files in other folders)
