[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelkit"
version = "0.1.5"
description = "Library-first toolkit for inspecting, previewing, and QA reporting imaging datasets."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Arsalaan Ahmad" }
]
dependencies = [
  "numpy",
  "nibabel",
  "h5py",
  "pillow",
  "tifffile",
]

[project.optional-dependencies]
gui = [
  "streamlit",
]

[project.scripts]
voxelkit = "voxelkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxelkit*"]
exclude = ["tests*"]